# grok3d

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  Makefile  README.md  WORKSPACE  glfw3.BUILD
examples/: LICENSE
examples/add_remove_test/: BUILD  Readme.md  main.cpp
examples/hellosquare/: BUILD  Readme.md  main.cpp
examples/hellosquare/shaders/vertex/: equal.vert
examples/hellotriangle/: BUILD  Readme.md  main.cpp
examples/move_simulation/: BUILD  Readme.Md  main.cpp  movebackandforthbehaviour.h
examples/multi_vao_triangle/: BUILD  main.cpp
examples/multi_vao_triangle/shaders/vertex/: forward_color.vert
examples/pulsingtriangle/: BUILD  Readme.md  helloshapes.h  main.cpp
examples/textured_rect/: BUILD  main.cpp
examples/textured_rect/shaders/fragment/: texturedshader_color.frag
examples/textured_rect/shaders/vertex/: equal_forward_colortexture.vert
grok3d/: BUILD  Doxyfile  LICENSE  grok3d.h  grok3d_types.h
grok3d-test-program/: BUILD  LICENSE
grok3d-test-program/shaders/fragment/: orange.frag
grok3d-test-program/src/: helloshapes.cpp  helloshapes.h  main.cpp  movebackandforthtest.cpp
grok3d-test-programs/: BUILD  BUILD.bak
grok3d-test-programs/src/: helloshapes.cpp  helloshapes.h  main.cpp  movebackandforthtest.cpp  movebackandforthtest.h
grok3d/ecs/: EntityComponentManager.h
grok3d/ecs/component/: ComponentHandle.h  GameLogicComponent.cpp  GameLogicComponent.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h
grok3d/ecs/entity/: EntityHandle.h
grok3d/ecs/system/: GameLogicSystem.cpp  GameLogicSystem.h  RenderSystem.cpp  RenderSystem.h  System.cpp  System.h  SystemManager.cpp  SystemManager.h
grok3d/engine/: Engine.cpp  Engine.h
grok3d/glad/: BUILD
grok3d/glad/KHR/: khrplatform.h
grok3d/glad/glad/: glad.cpp  glad.h
grok3d/shaders/: ShaderManager.cpp  ShaderManager.h  shaderprogram.cpp  shaderprogram.h
grok3d/tests/ecs/: BUILD  EntityHandleTest.cpp  componenthandletest.cpp  gamelogiccomponenttest.cpp
grok3d/tests/mocks/: BUILD  mock_entitycomponentmanager.h
grok3d/textures/: BUILD  texturehandle.cpp  texturehandle.h
inc/: helloshapes.h  hellotriangle.h  movebackandforthtest.h
notstd/: BUILD  bidir_map.h  notstdtypetraits.h  tupleextensions.h
notstd/include/: bidir_map.h  notstdtypetraits.h
shaders/vertex/: equal.vert
src/: helloshapes.cpp  hellotriangle.cpp  main.cpp  movebackandforthtest.cpp
